fix: fix alignment problem

--- a/assets/styles/logs.css
+++ b/assets/styles/logs.css
@@ -1,6 +1,7 @@
 footer {
-  height: 50vh;
-  max-height: 50%;
+  height: 100%;
+  max-height: 100%;
+  overflow: auto;
 }
 footer h3 {
   height: 20px;
